--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 	       	</ul>
 	      </div>
 	
-</nav>     		
+</nav>     		<p th:text="${message}">asdf</p>
     <div class ="col-lg-3">
     <h1 style="font-size:100%;" >Zalogowany jako:</h1>
  <h1 style="font-size:100%;" th:text="${session.email}">Zalogowany</h1>  
