--- a/src/main/resources/templates/loginform.html
+++ b/src/main/resources/templates/loginform.html
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Formularz logowania</a>
     </div>
     <ul class="nav navbar-nav">
               <li><a  href="/loginform">Zaloguj sie</a></li>
