--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Formularz tworzenia nowego użytkownika</a>
     </div>
     <ul class="nav navbar-nav">
         <li> <a  href="/loginform">Zaloguj sie</a><li>
