--- a/src/main/resources/templates/teachersubmitregistrationpanel.html
+++ b/src/main/resources/templates/teachersubmitregistrationpanel.html
@@ -14,35 +14,27 @@
             var email = document.getElementById("email").value;
             var password = document.getElementById("password").value;
             var alert="Hasło musi mieć co najmniej 8 znaków";
-
             var email = document.getElementById("email").value;
             var atpos = email.indexOf("@");
             var dotpos = email.lastIndexOf(".");
-
-
             if (password.length < 8) {
                 document.getElementById("validpassword").innerHTML = alert;
                 return false;
             }
-
             var alert2 = "niepoprawny email"
             if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length  ) {
                 document.getElementById("validemail").innerHTML = alert2;
                 return false;
             }
             return true;
-
         }
     </script>
-
 </head>
 <body>
-
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Rejestracja nauczyciela</a>
     </div>
     <ul class="nav navbar-nav">        
             <li><a href="/loginform">Zaloguj sie</a></li>
@@ -50,36 +42,20 @@
         </ul>
     </div>
 </nav>  
- <div class="col-lg-3" >
-    		 <p th:text="${message}">Dodaj</p>
+<div class="col-lg-3" >
    			 <h2 style="font-size:130%;">Twoje dane:</h2> 
 <form th:action="@{/registerUser}" th:object="${RegisterKeyAndRoleDTO}" onsubmit="return validateForm();" method="post">
-	  			   <br/>  
-		    Kod logowania 			<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.keyRegisterValue}" readonly/>
-	 		Imię				 	<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.firstName}" readonly/>	
-   			Nazwisko				<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.lastName}" readonly/>
-   			Pesel					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.pesel}" readonly/>
-	      	
-			W przypadku gdy któraś z powyższych danych osoboowych jest błędna proszę skontakować się z adminem: adrian.skorupa92@gmail.com lub tel. 608820193
     <br/>
+            Kod logowania 			<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.keyRegisterValue}" readonly/>
+            Imię				 	<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.firstName}" readonly/>
+            Nazwisko				<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.lastName}" readonly/>
+            Pesel					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.pesel}" readonly/>
+            Twoje hasło		<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.password}" readonly/>
+            Twój E-mail		<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.email}" readonly/>
+            W przypadku gdy któraś z powyższych danych osoboowych jest błędna proszę skontakować się z adminem: adrian.skorupa92@gmail.com lub tel. 608820193
     <br/>
-
-    <label for="password">
-        <span>Proszę wpisać hasło</span>
-        <input class="form-control" id="password" type="text" th:field="${RegisterKeyAndRoleDTO.password}"/>
-
-        <span  style="color:#ff0019"id="validpassword" aria-live="polite"></span>
-    </label>
-
-    <label for="email">
-        <span>Proszę wpisać email:</span>
-        <input class="form-control" id="email" type="text" th:field="${RegisterKeyAndRoleDTO.email}"/>
-        <span style="color:#ff0019" id="validemail" aria-live="polite"></span>
-    </label>
-
     <button type="submit" >Submit to another page</button>
 </form>
-
  </div>
     <div class ="col-lg-3">
     </div> 
